[package]
name = "blockchain_rs"
version = "0.1.0"
edition = "2021"
description = "A lightweight and efficient blockchain implementation in Rust."
repository  = "https://github.com/yangsnapify/blockchain-rs"
license = "MIT"
keywords = ["blockchain", "transactions", "merkle"]

[dependencies]
sha2 = "0.9"
rsa = "0.5"  
rand_core = "0.5.1"
ed25519-dalek = "1.0"
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }